<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_turtlebot3_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="haruki@todo.todo">haruki</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!--<run_depend>gazebo_ros</run_depend>-->


  <export>
    <build_type>ament_python</build_type>

    <!-- ### その他、依存関係のあるパッケージ ### -->
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>launch_ros</exec_depend>


    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    
    <!--<exec_depend>visualization_msgs</exec_depend>-->
    
    <!--<gazebo_ros gazebo_model_path="${prefix}/models"/>-->
    <!--<gazebo_ros gazebo_media_path="${prefix}/models"/>-->
    
  　　<!--<exec_depend>tutorial_interfaces</exec_depend>-->
  </export>
</package>
